--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   name="LastName"
                 />
                 <img
-                  src="/images/icon-error.svg"
+                  src="icon-error.svg"
                   alt="icon-error"
                   id="lastName-error"
                 />
@@ -75,7 +75,7 @@
                   name="Email"
                 />
                 <img
-                  src="/images/icon-error.svg"
+                  src="icon-error.svg"
                   alt="icon-error"
                   id="email-error"
                 />
@@ -91,7 +91,7 @@
                   name="Password"
                 />
                 <img
-                  src="/images/icon-error.svg"
+                  src="icon-error.svg"
                   alt="icon-error"
                   id="password-error"
                 />
