--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   name="FirstName"
                 />
                 <img
-                  src="/images/icon-error.svg"
+                  src="icon-error.svg"
                   alt="icon-error"
                   id="firstName-error"
                 />
